--- a/README
+++ b/README
@@ -1,12 +1,10 @@
-Ticketmaster-API
+# The Ticketmaster Perl SDK
 
-Group of modules to interact with Ticketmaster Public API.
+Group of modules to interact with Ticketmaster API. Documentation for the API can be found here: http://ticketmaster-api.github.io/
 
-General documentation for Ticketmaster's API can be found here: http://ticketmaster-api.github.io
+To get started with the API, you'll need to get an API key which can be optained with an account here: https://dev-livenation.devportal.apigee.com/user/login
 
-To be able to interact with Ticketmaster's APIs you'll need to get an API key which can be optained with an account here: https://dev-livenation.devportal.apigee.com/user/login
-
-INSTALLATION
+## INSTALLATION
 
 To install this module, run the following commands:
 
@@ -15,7 +13,7 @@ To install this module, run the following commands:
 	make test
 	(sudo) make install
 
-SUPPORT AND DOCUMENTATION
+## SUPPORT AND DOCUMENTATION
 
 After installing, you can find documentation for this module with the
 perldoc command.
@@ -37,7 +35,7 @@ You can also look for information at:
         http://search.cpan.org/dist/Ticketmaster-API/
 
 
-LICENSE AND COPYRIGHT
+## LICENSE AND COPYRIGHT
 
 Copyright (C) 2016 Erik Tank
 
@@ -45,7 +43,7 @@ This program is free software; you can redistribute it and/or modify it
 under the terms of the the Artistic License (2.0). You may obtain a
 copy of the full license at:
 
-L<http://www.perlfoundation.org/artistic_license_2_0>
+<http://www.perlfoundation.org/artistic_license_2_0>
 
 Any use, modification, and distribution of the Standard or Modified
 Versions is governed by this Artistic License. By using, modifying or
